scroll to different grids work

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,9 +1,9 @@
 /* define classes here */
 /* CANNOT DO element selectors */
-.test {
+/* .test {
     color: darkturquoise;
 }
 
 .cap {
     text-align: center;
-}
+} */
